// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyPlaceRewardsOverviewTile component should render correctly when coupons are not present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    textDecoration={null}
  />
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={20}
  />
  <View>
    <Styled(BodyCopy)
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs13"
      margin={null}
      numberOfLines={null}
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel=""
        accessibilityRole="link"
        anchorVariation="button"
        borderColor="black"
        borderWidth="1"
        buttonVariation="variable-width"
        centered={true}
        colorName={null}
        customStyle={Object {}}
        dataLocator="accountoverview-myplacerewardstile-startshopbtn"
        fill="WHITE"
        fullWidth={true}
        locator=""
        onPress={[Function]}
        text=""
        visible={false}
      />
    </Styled(View)>
  </View>
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={20}
  />
  <Styled(View)>
    <Styled(WithTheme(CustomButton))
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`MyPlaceRewardsOverviewTile component should render correctly when coupons are present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    margin={null}
    numberOfLines={null}
    textDecoration={null}
  />
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={20}
  />
  <Styled(View)>
    <View>
      <Styled(BodyCopy)
        accessibilityText=""
        data-locator="accountoverview-myplacerewatdstile-youhaverewardtext"
        dataLocator=""
        fontSize="fs14"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text=""
        textDecoration={null}
      />
    </View>
    <Styled(View)>
      <CouponList
        commonLabels={Object {}}
        coupons={
          Immutable.List [
            Object {},
          ]
        }
        labels={
          Object {
            "lbl_overview_myPlaceRewardsAvailable": "",
          }
        }
        sliceCount={2}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={20}
  />
  <Connect(BonusPointsDays)
    labels={
      Object {
        "lbl_overview_myPlaceRewardsAvailable": "",
      }
    }
    view="read"
  />
  <Styled(View)>
    <Styled(WithTheme(CustomButton))
      buttonVariation="variable-width"
      fill="BLUE"
      onPress={[Function]}
    />
  </Styled(View)>
</Styled(View)>
`;
